<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="pl.edu.pwr.swim.paluszek.bmi2.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/switchUnitRG"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/changeUnitToMKG"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/MKG_Unit"
                    android:textColor="@android:color/background_light" />

                <RadioButton
                    android:id="@+id/changeUnitToIBFT"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/IBFT_Unit"
                    android:textColor="@android:color/background_light" />
            </RadioGroup>


            <TextView
                android:id="@+id/massText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/switchUnitRG"
                android:text="@string/mass_label"
                android:textColor="@android:color/background_light" />

            <EditText
                android:id="@+id/massET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/switchUnitRG"
                android:layout_toEndOf="@id/massText"
                android:gravity="end"
                android:hint="@string/massKg_hint"
                android:inputType="numberDecimal"
                android:text=""
                android:textColor="@android:color/background_light"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/heightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/massET"
                android:layout_marginTop="40dp"
                android:text="@string/height_label"
                android:textColor="@android:color/background_light" />


            <EditText
                android:id="@+id/heightET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/massET"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@id/heightText"
                android:gravity="end"
                android:hint="@string/heightM_hint"
                android:inputType="numberDecimal"
                android:text=""
                android:textColor="@android:color/background_light"
                android:textSize="22sp"/>

            <Button
                android:id="@+id/countBT"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_below="@id/heightET"
                android:layout_marginTop="30dp"
                android:text="@string/count_button_text" />


            <TextView
                android:id="@+id/bmiTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/countBT"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/bmi_label"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/resultTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bmiTV"
                android:text=""
                android:textAlignment="center"
                android:textSize="100sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
